# PtolemyDesktop

./: .env.example  .gitignore  .gitignore.SSF  BUILD_PRIMER_2026-05-15.md  CHANGELOG.md  CONTEXT_PRIMER_2026-05-04.txt  INSTALL.md  Lich.py  MONAD.md  PRIMER_2026-05-14_bao_error_check.txt  PRIMER_2026-05-14_monad_build.txt  PRIMER_2026-05-14_synthesis_engine.txt  PROCESSOR_VISION.md  PTOLEMY_TODO.txt  Ptolemy3.py  README.md  REFACTOR_MAP.txt  SERVER_SPEC.md  TODO.md  ptolemy_setup-apt_pip3.sh  ptolemy_setup-venv.sh
.claude/: README.md
.primers/: CONTEXT.md  CONTEXT_PRIMER.md  CONTEXT_PRIMER_2026-05-01.txt  CONTEXT_PRIMER_2026-05-02.txt  CONTEXT_PRIMER_2026-05-02B.txt  CONTEXT_PRIMER_2026-05-02C.txt  CONTEXT_PRIMER_2026-05-03.txt  CONTEXT_PRIMER_2026-05-03D.txt  CONTEXT_PRIMER_2026-05-03E.txt  CONTEXT_PRIMER_2026-05-03F.txt  PRIMER_NEXT_CHAT.txt  context_primer.txt
Ainulindale/: ROADMAP.md  __init__.py
Alexandria/: FractalRenderer.py  smnnip_engine_alexandria.py
Anaximander/: smnnip_engine_anaximander.py
Archimedes/: ArchimedesTree.txt  smnnip_engine_archimedes.py  spherical_resonance.py
Archive/: README.md
Aule/: .gitignore  aule.py  aule_sanitation.py  aule_shim.py  aule_wiring.py  forge_queue.py  smnnip_engine_aule.py
Callimachus/: checkpoint_export.py  hyperwebster_layer3.py  pep_init.py  ptolemy_ingest.py  smnnip_engine_callimachus.py  vast_repository.py  wordnet_init.py
Kryptos/: GlyphForge.py  kcf.py  kryptos_vault.py  smnnip_engine_kryptos.py
Mandos/: __init__.py  mandos.py  mandos_resurrect.py  mandos_store.py  mandos_watchdog.py  smnnip_engine_mandos.py
Modules/: module_install.py  modules_directory.py
Mouseion/: smnnip_engine_mouseion.py
Phaleron/: phaleron_display.py  phaleron_search.py  smnnip_engine_phaleron.py
Pharos/: DropWindow.py  (+23 more)
PtolCPP/GeminiConsole/: CMakeLists.txt  README.md  main.cpp
PtolFlutter/: CMakeLists.txt  README.md  pubspec.yaml  setup.sh
PtolFlutter/android/: build.gradle
PtolFlutter/android/app/: CMakeLists.txt  build.gradle
PtolFlutter/android/app/src/main/: AndroidManifest.xml
PtolFlutter/android/app/src/main/kotlin/com/ptol/ptolemy/: MainActivity.kt
PtolFlutter/ios/Runner/: Info.plist
PtolFlutter/ios/Runner.xcodeproj/: project.pbxproj
PtolFlutter/linux/: CMakeLists.txt  my_application.cc
PtolFlutter/macos/Runner.xcodeproj/: project.pbxproj
PtolFlutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
PtolFlutter/macos/Runner/Configs/: AppInfo.xcconfig
PtolFlutter/src/: ptolemy_ffi.c  ptolemy_ffi.h
PtolFlutter/test/: widget_test.dart
PtolFlutter/windows/: CMakeLists.txt
PtolFlutter/windows/runner/: Runner.rc
(+902 files in other folders)
